# snapnet

./: config.json  pyproject.toml  sem3d_gen_images.py  sem3d_test_backproj.py  sem3d_train.py
python/pytorch/: pytorch_trainer.py
semantic3D_utils/: Normals.h  Sem3D.cxx  Semantic3D.cpp  setup.py
