[tool.poetry]
name = "snapnet"
version = "0.1.0"
description = ""
authors = ["Asbjørn Berge <asbjorn.berge@sintef.no>"]

[tool.poetry.dependencies]
python = "^3.7"
cython = "^0.29.14"
numpy = "^1.17.4"
scipy = "^1.3.2"
tqdm = "^4.38.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
