[tool.poetry]
name = "snapnet"
version = "0.1.0"
description = ""
authors = ["Asbjørn Berge <asbjorn.berge@sintef.no>"]

[tool.poetry.dependencies]
python = "^3.7"
cython = "^0.29.14"
numpy = "^1.17.4"
scipy = "^1.3.2"
tqdm = "^4.38.0"
pyopengl = "^3.1.0"
pyqt5 = "^5.13.2"
pillow = "^6.2.1"
torch = {url = "https://download.pytorch.org/whl/cu101/torch-1.3.1-cp37-cp37m-win_amd64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu101/torchvision-0.4.2-cp37-cp37m-win_amd64.whl"}
sklearn = "^0.0"
open3d = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
